@@ -9,10 +9,18 @@ Filters / Faceted Search
 ke_search comes with a faceted search feature which allows the website visitors to narrow down the search result list
 by using filters.
 
-Filters are either based on tags or on a date.
+Filters are either based on tags (also known as "filter options") or on a date.
 
 For tag based filters you'll have to create "filters" and "filter options". Filter options appear in the searchbox
 in the frontend and at the same time you can set them as "tags" for pages (or other content) in the backend.
+
+..  versionadded:: ke_search v6.4.0
+    Index tag titles as hidden content: If activated in the extension settings,
+    tag titles will be indexed as hidden content. This is useful if you want to
+    search for the titles of filter options in the fulltext search. For example
+    if you have a filter option "Sweatshirt" and you want to find all products
+    with this filter option, you can search for "Sweatshirt" in the fulltext
+    search and all products with this filter option will be found.
 
 Examples
 ========
